Fixed z-index conflict with jquery ui dialog

--- a/src/scss/_options.scss
+++ b/src/scss/_options.scss
@@ -1,7 +1,6 @@
 .options {
     display: block;
     position: relative;
-    z-index: 1;
     overflow-y: auto;
     overflow-x: hidden;
     border: solid 1px $optionsBorderColor;
